--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,14 +1,13 @@
 {{ define "main" }}
 
 <main>
-	{{ partial "index/introduction.html" . }}
-
+    <h1>{{ strings.FirstUpper .Data.Singular }} {{ .Title }}</h1>
 	<div class="catalogue">
-		{{ range (.Paginate .Site.RegularPages).Pages }}
+		{{ range (.Paginate .Pages).Pages }}
 			{{ .Render "summary" }}
 		{{ end }}
 	</div>
-
+	
 	<div class="pagination">
 		{{ if .Paginator.HasPrev }}
 			<a href="{{ .Paginator.Prev.URL }}" class="left arrow">&#8592;</a>
@@ -16,7 +15,7 @@
 		{{ if .Paginator.HasNext }}
 			<a href="{{ .Paginator.Next.URL }}" class="right arrow">&#8594;</a>
 		{{ end }}
-
+	
 		<span>{{ .Paginator.PageNumber }}</span>
 	</div>
 </main>
