--- a/assets/scss/tale/_variables.scss
+++ b/assets/scss/tale/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$default-color: blue;
-$default-shade: #353535;
+$default-color: #1d3557;
+$default-shade: #1d3557;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
