--- a/assets/scss/tale/_variables.scss
+++ b/assets/scss/tale/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$default-color: #30343f;
-$default-shade: #30343f;
+$default-color: #555;
+$default-shade: #353535;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
