--- a/assets/scss/tale/_variables.scss
+++ b/assets/scss/tale/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$default-color: #DA4034;
-$default-shade: #202095;
+$default-color: #353535;
+$default-shade: #DA4034;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
