--- a/assets/scss/tale/_variables.scss
+++ b/assets/scss/tale/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $default-color: #353535;
-$default-shade: #DA4034;
+$default-shade: #F99128;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
